--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/MYFINACES_DB
+spring.datasource.url=jdbc:postgresql://localhost:5432/myfinances_db
 spring.datasource.username=postgres
 spring.datasource.password=123456
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#jwt.secret=MYJWTSECRET
+#jwt.expiration=3600000
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#
-#spring.jpa.properties.hibernate.format_sql=true
+
