--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,19 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/MYFINACES_DB
-spring.datasource.username=postgres
-spring.datasource.password=123456
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.show-sql=true
+#Utilizando Postgress
+#spring.datasource.url=jdbc:postgresql://localhost:5432/MYFINACES_DB
+#spring.datasource.username=postgres
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.show-sql=true
 
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#
+
+spring.datasource.url=jdbc:mysql://localhost:3306/MYFINACES_DB?useTimezone=true&serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
+
+
+
+#jpa
 #spring.jpa.properties.hibernate.format_sql=true
